# NanoTrain

./: .gitignore  .pre-commit-config.yaml  Dockerfile  PLAN.md  README.md  benchmark.py  environment.yml  pyproject.toml  train.py
benchmark/: README.md  aggregate_results.py
benchmark/profiles/: ddp_2gpu_nsys.nsys-rep  ddp_2gpu_nsys.qdstrm  tp_2gpu_nsys.nsys-rep  zero2_2gpu_nsys.nsys-rep
configs/: bench_gpt2_owt.yaml  bench_gpt2_owt_ddp.yaml  bench_gpt2_owt_tp.yaml  bench_gpt2_owt_zero.yaml  bench_gpt_medium.yaml  bench_gpt_memory_stress.yaml  bench_gpt_tp_medium.yaml  bench_gpt_zero_memory.yaml  gpt_ddp_smoke.yaml  gpt_single_gpu.yaml  gpt_tp_shakespeare_char.yaml  gpt_tp_smoke.yaml  gpt_zero1_smoke.yaml  gpt_zero2_shakespeare_char.yaml  gpt_zero2_smoke.yaml  nanogpt_shakespeare_char_smoke.py  nanotrain_shakespeare_char_smoke.yaml
docs/: README.md  interview_prep_kuaishou_kling.md
examples/: README.md
nanotrain/: __init__.py
nanotrain/checkpoint/: __init__.py  manager.py
nanotrain/config/: __init__.py  schema.py
nanotrain/data/: __init__.py  bin_token_dataset.py  shakespeare_char.py
nanotrain/distributed/: __init__.py
nanotrain/model/: __init__.py  gpt.py  gpt_tp.py
nanotrain/optimizer/: __init__.py  builder.py  zero.py
nanotrain/parallel/: __init__.py  layers.py  (+1 more)
scripts/: README.md  run_memory_benchmarks.sh  run_nsys_profiles.sh  run_phase6_benchmarks.sh  run_scaling_benchmarks.sh
tests/: test_benchmark.py  test_checkpoint.py  test_config.py  test_data.py  test_distributed.py  test_gpt.py  test_gpt_tp.py  test_import.py  test_zero.py
(+94 files in other folders)
