[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanotrain"
version = "0.1.0"
description = "A lightweight, extensible training engine built from a nanoGPT baseline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "numpy",
    "pyyaml",
    "tiktoken",
    "torch",
    "tqdm",
    "transformers",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["nanotrain*"]
exclude = ["nanoGPT*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | nanoGPT
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["nanoGPT"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

